<resources>
    <string name="app_name">QUietNight</string>
    <string name="action_settings">Brighten/Dim</string>
    <string name="action_share">Share</string>
    <string name="motto">Never have a QUiet Night at QU</string>
    <string name="Sports">Sports</string>
    <string name="Weather">Weather</string>
    <string name="Hot_Spots">Hot Spots</string>
    <string name="FavDrinks">Favorite Drinks</string>
    <string name="SplashButton">Continue to the Main Menu</string>
    <string name="MainMenu">Main Menu</string>
    <string name="NewHaven">Tonight in... New Haven, CT</string>
    <string name="Description">Description:</string>
    <string name="High">High:</string>
    <string name="Low">Low:</string>
    <string name="Precipitation">Precipitation:</string>
    <string name="Humidity">Humidity:</string>
    <string name="Sunrise">Sunrise:</string>
    <string name="Sunset">Sunset:</string>
    <string name="LearnMore">Learn More</string>
    <string name="AboutUs">QUietNight by Innovation</string>
    <string name="aboutus">About QUietNight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
