<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SplashActivity">

    <item
        android:id ="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"/>

    <item
        android:id ="@+id/about_us"
        android:title="@string/aboutus"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>