<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.christiandegenova.quietnight_1.MainMenu"
    android:background="@color/DarkBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainMenu"
        android:textColor="@color/FadedBlue"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textSize="50sp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/Sports"
        android:id="@+id/sport_button"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:textColor="@color/DarkBlue"
        android:background="@color/Yellow"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="onClickSport"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/Hot_Spots"
        android:id="@+id/hot_button"
        android:layout_below="@+id/sport_button"
        android:layout_alignStart="@+id/sport_button"
        android:textColor="@color/DarkBlue"
        android:textStyle="bold"
        android:background="@drawable/button_border"
        android:layout_alignEnd="@+id/sport_button"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:onClick="onClickHot"/>

</RelativeLayout>